Fixed spacing

--- a/src/pages/crafelo/CrafeloBody/CrafeloBody.scss
+++ b/src/pages/crafelo/CrafeloBody/CrafeloBody.scss
@@ -2,11 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 20rem 0;
+  margin: 10rem 0;
   height: 80vh;
 
   &__left {
-    height: 100%;
+    height: 80%;
     width: 50%;
     display: flex;
     flex-direction: column;
